--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="resume_container">
                 <div class="resumetab">
-                    <a href="https://drive.google.com/drive/folders/1-7EMk6ihkXw57uxOxvwS7gI-u7xiltsH">RESUME</a>   
+                    <a href="https://drive.google.com/file/d/11RsPJ3jYvJzVEzelataALYb-OO3udh-S/view?usp=sharing">RESUME</a>   
                 </div>
                 
             </div>
