--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
+    <span class="loader"></span>
     <header class="header">
         <div class="social">
             <ul class="icon">
