--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </section>
 
     <div class="createdby">
-        <p>© Copyright All rights reserved. Developed by  @viraj kale</p>
+        <p>© Copyright All rights reserved. Developed by  @viraj Rajesh kale</p>
     </div>
 
 
