--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content=" Hello! My name is Viraj and I enjoy creating things that live on the internet. My interest in web development , this is viraj kale - portfolio website which helps you to find my all projects and work">
     <meta name="Keyword" content="viraj rajesh kale,viraj,viraj kale,kale viraj,best portfolio website,how to create portfolio website in html css,top portfolio website design,best portfolio website designer">
     <meta name="author" content="viraj rajesh kale">
-    <meta name="image" content="/viraj_image.jpg">
+    <meta name="image" content="/viraj_image.jpg" alt="viraj kale">
     <link rel="stylesheet" href="style1.css">
     <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
